v 0.8.7
SQL requests more elaborate